edited styles, add downloadable pdf

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUJBXKCJ2X6lTB7inHQSSsKfOEuZYa8Q4&libraries=places,marker"></script>
     <title>React App</title>
   </head>
